# tabs

./: pyproject.toml
tabs/: main.py
tabs/models/: bookmark.py
templates/: base.html  index.html
