[tool.poetry]
name = "tabs"
version = "0.1.0"
description = ""
authors = ["Marius Meschter <marius.meschter@univention.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
pydantic = "^2.5.2"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
